plugins {
    id 'java'
    id 'application'
}

group = 'io.github.ititus'
version = '1.0.0'

wrapper {
    gradleVersion '7.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }

    withSourcesJar()
    withJavadocJar()
}

application {
    mainClass = 'io.github.ititus.aoc.AocMain'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.github.ititus:ititus-commons:1.5.9'
    implementation 'it.unimi.dsi:fastutil:8.5.6'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'commons-cli:commons-cli:1.4'

    testImplementation platform('org.junit:junit-bom:5.8.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.21.0'
    testImplementation 'org.mockito:mockito-core:4.0.0'
}
